--- a/Configs/baiduAipApp.cfg
+++ b/Configs/baiduAipApp.cfg
@@ -1,6 +1,6 @@
 [config]
-APP_ID=15817125
-API_KEY=1oEFg9XoBSyNGdZu4j5S46MD
-SECRET_KEY=x2v18GyRtl5A2exbzrHyPnVxVw4pUsd1
+APP_ID=your_number
+API_KEY=your_number
+SECRET_KEY=your_number
 VOL=5
 PER=4
