--- a/Configs/turingRobotApp.cfg
+++ b/Configs/turingRobotApp.cfg
@@ -1,4 +1,4 @@
 [config]
-API_KEY=110460a4f296491aa0b984e32e90a628
-USER_ID=417231
+API_KEY=your_number
+USER_ID=your_number
 URL=http://openapi.tuling123.com/openapi/api/v2
